renaming cv group to cloud

--- a/roles/km_bash/tasks/main.yml
+++ b/roles/km_bash/tasks/main.yml
@@ -31,3 +31,8 @@
     dest: ~/.vimrc
     state: link
 
+- name: symlink gitconfig
+  file:
+    src: ~/.km_bash/gitconfig
+    dest: ~/.gitconfig
+    state: link
